--- a/lib1.css
+++ b/lib1.css
@@ -6,17 +6,31 @@ height:100px;
 display:flex;
 box-shadow: 0px 2px 2px 0px gainsboro, inset 0px -1px 6px -2px cadetblue;
 }
+#author2{
+    cursor: pointer;
+}
+#author2:hover{
+    text-decoration: underline;
+}
 .logo{
    margin-left:15px;
    cursor: pointer;
 }
-
+#infobox1{
+    background:gainsboro;
+    font-size:10px;
+    padding:10px;
+    border-radius: 10px;
+}
 .mc{
     margin-top:110px;
     display:flex;
 }
 .clm1{
     width:20vw;
+    padding:20px;
+}
+.clm2{
     padding:20px;
 }
 .ac{
