--- a/lib1.css
+++ b/lib1.css
@@ -12,6 +12,20 @@ box-shadow: 0px 2px 2px 0px gainsboro, inset 0px -1px 6px -2px cadetblue;
 #author2:hover{
     text-decoration: underline;
 }
+.sityou{
+    margin-top: 10px;
+    border:solid lightskyblue;
+}
+.player{
+    display: flex;
+}
+.ppbn{
+    margin:8px;
+    width:40px;
+}
+.pmn{
+    margin-left: 10px;
+}
 .logo{
    margin-left:15px;
    cursor: pointer;
@@ -31,7 +45,7 @@ box-shadow: 0px 2px 2px 0px gainsboro, inset 0px -1px 6px -2px cadetblue;
     padding:20px;
 }
 .clm2{
-    padding:20px;
+    padding:10px;
 }
 .ac{
     width:100%;
