--- a/lib1.css
+++ b/lib1.css
@@ -62,6 +62,9 @@ box-shadow: 0px 2px 2px 0px gainsboro, inset 0px -1px 6px -2px cadetblue;
    
    /* --- テキスト入力欄のSTYLE設定 --- */
   .searchArea .searchText {
+    -moz-transition:1s ease;
+    -webkit-transition:1s ease;
+    transition:0.8s ease;
     display        : block;              /* ブロック化            */
     float          : left;               /* 横並び                */
     box-sizing     : border-box;         /* 枠線,余白を含んだ長さ */
@@ -90,16 +93,51 @@ box-shadow: 0px 2px 2px 0px gainsboro, inset 0px -1px 6px -2px cadetblue;
     font-size      : 20px;               /* フォントサイズ        */
   }
    
-
+#lod{
+    color: #fff;
+    position: absolute;
+    top:0;left:0;
+    z-index: 1000;
+    width: 100%;
+    height:100%;
+}
   
   .searchArea .searchImg {
     display        : inline-block;       /* インラインブロック化  */
     width          : auto;               /* 幅は高さに合わせる    */
     height         : 20px;               /* 画像の高さ            */
-    margin         : 0 3px 0 0;          /* 余白                  */
+    margin         : 0 3px 0 0;       /* 余白                  */
     vertical-align : middle;             /* 横の文字位置          */
   }
    
   .searchArea .searchText::-ms-clear {
     display        : none;               /* ×を消す              */
   }
+
+
+  @media screen and (max-width:800px){
+    .clm1,.clm2{
+        width: 100%;
+    }
+    .mc{
+        display:block;
+    }
+    .searchArea .searchText{
+        width:0%;
+    }
+    .searchText:focus{
+        width: 80%;  
+    }
+    .searchArea{
+        width          : 90%;  
+        height         : 32px; 
+        margin-top     : 25px;    
+        margin-left    : 8%;
+        letter-spacing : 0.1em;              /* 文字間隔              */
+        font-weight    : bold;               /* 太字                  */
+        line-height    : 0;                  /* 標準の行高さ          */
+      }
+      topbox{
+        width:100%;
+      }
+    }
